Fix nested lists in content with extra margins
Former-commit-id: 278d2912f9c08695d96b5cc9020590760437be6b

--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -22,6 +22,12 @@ p ~ p {
 	margin-top: $small-spacing;
 }
 
+li {
+	ul, ol {
+		margin-bottom: 0;
+	}
+}
+
 @mixin clearfix {
 	&:before,
 	&:after {
